src/other/mico-2.3.12/test/idl/error/case1.idl

/*
 * Two identical identifiers on the same scope
 */

struct A 
{
  long x;
};

exception A
{
};
